# cookiecutter-rust-tonic

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
templates/hello-world/{{ cookiecutter.project_slug }}/: Cargo.toml
templates/prost-pb/{{ cookiecutter.project_slug }}/: Cargo.toml
templates/prost-pb/{{ cookiecutter.project_slug }}/src/: main.rs
