[package]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
prost = "0.13"
tonic = {version = "0.12", features = ["gzip"]}

[build-dependencies]
tonic-build = "0.12"
